<resources>
    <string name="app_name">AskAndAnswer</string>
    <string name="contenDesc_logo">Logo Photo</string>
    <string name="enter">Enter</string>
    <string name="ed_fname_hint">First name</string>
    <string name="ed_lname_hint">Last name</string>
    <string name="ed_name_hint">Username</string>
    <string name="ed_email_hint">Email</string>
    <string name="ed_password_hint">Password</string>
    <string name="ed_repassword_hint">Re-Password</string>
    <string name="ed_new_password_hint">New Password</string>
    <string name="ed_re_new_password_hint">Re-New Password</string>
    <string name="introduction">INTRODUCTION</string>
    <string name="contact">CONTACT US</string>
    <string name="intro_content">Question combines the power and potential of Asking Therapy and Answering Therapy into one money-saving app.\n\n
Asking and answering questions is critical to the natural give-and-take of everyday communication.\n\n Re-learning how to properly initiate and respond to questions will help a person with aphasia regain confidence in conversation.\n\n
Question Therapy targets both the receptive and the expressive use of questions, concentrating on yes-or-no questions and the who, what, when, where, how, and why of a situation.</string>
    <string name="tv_signup_now">Not amember? &lt;b&gt;Signup&lt;/b&gt; Now</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tv_login_using">Or Login Using</string>
    <string name="facebook">Login with Facebook</string>
    <string name="google">Login with Google +</string>
    <string name="contactus_small">Contact Us</string>
    <string name="ed_contactus_hint">write here ...</string>
    <string name="btn_send">SEND</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="tv_delPostTitle">Delete Post?</string>
    <string name="tv_delPostAttention">Deleting the post is forever, There is no undo.</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="view_post_example">An activity is a single, focused thing that the users can do. when ever users click on GUI the next Activity will be start and new GUI set base on coding. An activity is a single, focused thing that the users can do. when ever users click on GUI the next Activity will be start and new GUI set base on coding. An activity is a single, focused thing that the users can do. when ever users click on GUI the next Activity will be start and new GUI set base on coding.</string>
    <string name="terms">TERMS AND CONDITIONS</string>
    <string name="terms_example">1. Acceptance of terms of use and amendments each time you use or cause access to this application, you agree to be bound by these Terms of use, as amended from time to time with or without notice to you. In addition, if you are using a particular service ont his application or accessed via this application, you will be subject to any rules or guidelines applicable to those services, and they will be incorporated by reference within these Terms of use.
        \n \n2. ServicesThis application and the services provided to you on and via this application are provided on an "AS IS" basis.</string>
    <string name="accept">ACCEPT</string>
    <string name="notification_setting_title">Notifications and Sounds</string>
    <string name="notification_setting_desc">Notify me about updates to Questions and Answers</string>
    <string name="profile_setting_title">Profile</string>
    <string name="profile_setting_desc">Other users can see my profile</string>
    <string name="ed_fullName_hint">Full Name</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="add_post">Add Image and Description</string>
    <string name="ed_add_post_hint">What is your Question?</string>
    <string name="tv_your_questions">The Questions which you add</string>
    <string name="post_example">An activity is a single, focused thing that the users can do. when ever users click on GUI the next Activity will be start and new GUI set base on coding.</string>
    <string name="tv_comments_count">%1$d Comment</string>
    <string name="tv_ask_count">%1$d Ask</string>
    <string name="tv_answer_count">%1$d Answer</string>
    <string name="unallow_delete_category">You must delete all posts in %1$s before deleting</string>

    <string name="tv_comment">Comment</string>
    <string name="tv_share">Share</string>
    <string name="tv_favorite">Favorite</string>
    <string name="next">NEXT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_questions">Search in Questions</string>
    <string name="edit_post">Edit Post</string>
    <string name="add_post_str">Add Post</string>
    <string name="choose_valid_image">please choose valid image</string>
    <string name="current_password">Current Password</string>
    <string name="facebook_app_id">446821295503912</string>
    <string name="android">Android</string>
    <string name="delete_post">Delete Post</string>
    <string name="loading">Loading...</string>
    <string name="logging">Logging in...</string>
    <string name="registering">Registering...</string>
    <string name="submitting">Submitting...</string>
    <string name="sending">Sending data...</string>
    <string name="retry">Press to Retry</string>
    <string name="no_posts_found">No Posts Found...</string>
    <string name="saving">Saving...</string>

    <string-array name="categories">
        <item>Programming</item>
        <item>Writing</item>
        <item>English</item>
        <item>Cocking</item>
        <item>Design</item>
        <item>Android</item>
        <item>PHP</item>
        <item>ASP</item>
    </string-array>
    <string-array name="drawerItems">
        <item>Timeline</item>
        <item>My Asks</item>
        <item>My Answers</item>
        <item>Favorite</item>
        <item>Profile</item>
        <item>Search</item>
        <item>Logout</item>
        <!--<item>Settings</item>-->
        <item>Terms Of Use</item>
        <item>About</item>
        <item>Feedback</item>
    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_timeline</item>
        <item>@drawable/ic_question_nav</item>
        <item>@drawable/ic_answer_nav</item>
        <item>@drawable/ic_favorite_nav</item>
        <item>@drawable/ic_name_flat</item>
        <item>@drawable/ic_search_black</item>
        <item>@drawable/ic_logout</item>
        <!--<item>@drawable/ic_settings</item>-->
        <item>@drawable/ic_terms</item>
        <item>@drawable/ic_info</item>
        <item>@drawable/feedback</item>
    </array>
    <array name="nav_drawer_icons_on">
        <item>@drawable/ic_timeline_on</item>
        <item>@drawable/ic_question_nav_on</item>
        <item>@drawable/ic_answer_nav_on</item>
        <item>@drawable/ic_favorite_nav_on</item>
        <item>@drawable/ic_profile_on</item>
        <item>@drawable/ic_search_on</item>
        <item>@drawable/ic_logout_on</item>
        <!--<item>@drawable/ic_settings</item>-->
        <item>@drawable/ic_terms_on</item>
        <item>@drawable/ic_info_on</item>
        <item>@drawable/feedback_on</item>
    </array>

    <string name="BR_GNL_001">Please check your internet connection</string>
    <string name="BR_GNL_002">Please check email format</string>
    <string name="BR_GNL_003">Please, Password must contains letters and numbers, and it must be greater than 8 characters</string>
    <string name="BR_GNL_004">Please, username contains only letters, numbers, ., _, -</string>
    <string name="BR_GNL_005">No more data to load it</string>
    <string name="BR_GNL_006">An Error Occurred, retry</string>
    <string name="BR_GNL_007">Please enter valid message</string>

    <string name="BR_LOGIN_001">Please enter your username</string>
    <string name="BR_LOGIN_002">Please enter your password</string>
    <string name="BR_LOGIN_003">Username or password was incorrect</string>
    <string name="BR_LOGIN_004">User not exist</string>
    <string name="BR_LOGIN_005">Account does not active</string>

    <string name="BR_SIGN_001">Please enter your first name</string>
    <string name="BR_SIGN_002">Please enter your password</string>
    <string name="BR_SIGN_003">Please repeat your password</string>
    <string name="BR_SIGN_004">User already exists</string>
    <string name="BR_SIGN_005">Please enter your email</string>
    <string name="BR_SIGN_006">Password and repeated password does not match</string>
    <string name="BR_SIGN_007">Please enter your last name</string>

    <string name="BR_EP_001">Please enter your full name</string>
    <string name="BR_EP_002">Please enter your current password</string>
    <string name="BR_EP_003">Current password incorrect</string>
    <string name="BR_EP_004">Please enter your new password</string>
    <string name="BR_EP_005">Please enter your confirm new password</string>

    <string name="BR_AEP_001">Please, your must select photo</string>
    <string name="BR_AEP_002">Please enter your question</string>
    <string name="BR_AEP_003">Please, your question must be at maximum 8000 character</string>

    <string name="BR_CATS_001">Please select at least one category</string>
    <string name="BR_CATS_002">Oh, you must select at maximum 20 category</string>

    <string name="BR_POST_001">This post does not have comments</string>
    <string name="saved">Saved Successfully</string>
    <string name="delteing">Deleting...</string>
    <string name="deleted">Deleted Successfully</string>
    <string name="post_is_favorite">This Post is already favorite</string>
    <string name="post_favorite_added">Post added to favorite</string>
    <string name="post_favorite_removed">Post removed from favorite</string>
    <string name="no_comments_found">No Comments Found</string>
    <string name="tv_delCommentTitle">Delete</string>
    <string name="tv_delCommentAttention">This comment will be deleted.</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="delete">DELETE</string>
    <string name="update_categories">Update Categories</string>
    <string name="message_sent">Messsage sent successfully..</string>
    <string name="update_password">Update Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="no_comments">No comments</string>
    <string name="logging_out">Logging out...</string>
    <string name="deleteSmall">Delete</string>
    <string name="send_feedback">SUGGEST CATEGORIES</string>
    <string name="suggest_us">Suggest Categories</string>
    <string name="sending_message">sending message...</string>
    <string name="forget">Forget?</string>
    <string name="load_prev_comments">Load Previous Comments</string>
</resources>
