<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    tools:context="com.orchidatech.askandanswer.Activity.Signup">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/contenDesc_logo"
            android:id="@+id/iv_logo"
            android:visibility="visible"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_name"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:hint="@string/ed_name_hint"
            android:imeOptions="actionNext"
            android:id="@+id/ed_name" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:layout_below="@+id/ed_email"
            android:drawablePadding="10dp"
            android:hint="@string/ed_password_hint"
            android:imeOptions="actionNext"
            android:id="@+id/ed_password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:background="@drawable/btn_enter_backgnd"
            android:textColor="#fff"
            android:textSize="20dip"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_login" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_signup_now"
                android:textSize="16sp"
                android:text="@string/tv_signup_now"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textSize="16sp"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_using"
                android:textSize="16sp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_alignParentLeft="true"
                android:id="@+id/btn_fb"
                android:background="@drawable/btn_social_backgnd">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fb"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
           <LinearLayout
                       android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/btn_gplus"
                        android:background="@drawable/btn_social_backgnd">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_google"
                            android:layout_marginRight="15dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/google"
                            android:textColor="#fff"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
