<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_parent"
    android:layoutDirection="ltr"
    android:background="#fff"
    tools:context="com.orchidatech.askandanswer.Activity.Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_background"
        android:id="@+id/img_background"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/contenDesc_logo"
            android:id="@+id/iv_logo"
            android:layout_below="@+id/iv_back"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_back"
            android:src="@drawable/ic_back_flat"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

    <View android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#e8e7e7"
        android:layout_below="@+id/img_background"
        />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/ed_text_color"
            android:textCursorDrawable="@drawable/ed_cursor_backgnd"
            android:singleLine="true"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="0dp"
            android:hint="@string/ed_fname_hint"
            android:imeOptions="actionNext"
            android:id="@+id/ed_fname" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/ed_text_color"
            android:textCursorDrawable="@drawable/ed_cursor_backgnd"
            android:singleLine="true"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="0dp"
            android:layout_below="@+id/ed_fname"
            android:hint="@string/ed_lname_hint"
            android:imeOptions="actionNext"
            android:id="@+id/ed_lname" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="16sp"
            android:textColor="@color/ed_text_color"
            android:textCursorDrawable="@drawable/ed_cursor_backgnd"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:layout_below="@+id/ed_lname"
            android:drawablePadding="10dip"
            android:paddingLeft="0dp"
            android:hint="@string/ed_email_hint"
            android:imeOptions="actionNext"
            android:id="@+id/ed_email" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="16sp"
            android:textColor="@color/ed_text_color"
            android:textCursorDrawable="@drawable/ed_cursor_backgnd"
            android:singleLine="true"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:layout_below="@+id/ed_email"
            android:textDirection="ltr"
            android:drawablePadding="10dp"
            android:paddingLeft="0dp"
            android:hint="@string/ed_password_hint"
            android:imeOptions="actionNext"
            android:id="@+id/ed_password" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="16sp"
            android:textColor="@color/ed_text_color"
            android:textCursorDrawable="@drawable/ed_cursor_backgnd"
            android:singleLine="true"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"
            android:textDirection="ltr"
            android:layout_below="@+id/ed_password"
            android:drawablePadding="10dp"
            android:paddingLeft="0dp"
            android:hint="@string/ed_repassword_hint"
            android:imeOptions="actionDone"
            android:id="@+id/ed_repassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup"
            android:background="@drawable/btn_selector"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_signup" />

    </LinearLayout>
</LinearLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>
